--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header id="header">
-        <div class="header-wrapper bg-light py-2">
+        <div class="header-wrapper  py-3">
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-lg-2 col-md-3 col-sm-3 col-6 order-md-1 order-lg-1">
@@ -61,6 +61,58 @@
     </header>
 
     <!-- header end  -->
+
+   <section id="sliderArea">
+        <div class="slider-wrapper py-2">
+            <div class="container">
+                <div class="slider-wrapper">
+                  <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+                    
+                    <div class="carousel-inner">
+                      <div class="carousel-item  active">
+                        <img src="images/cover/cover-1.png" class="d-block w-100 " alt="...">
+                        <div class="carousel-caption">
+                          <div class="caption-wrapper w-50 mx-auto">
+                              <h2 class="display-3 text-white">Get Started Digital Learning</h2>
+                            <p class="text-white">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout</p>
+                            <a href="#" class="btn bg-primary text-white px-4 py-2 fs-5">Get Started</a>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="carousel-item">
+                        <img src="images/cover/cover-2.jpg" class="d-block w-100 " alt="...">
+                        <div class="carousel-caption">
+                          <div class="caption-wrapper w-50 mx-auto">
+                              <h2 class="display-3 text-white">Get Started Digital Learning</h2>
+                            <p class="text-white">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout</p>
+                            <a href="#" class="btn bg-primary text-white px-4 py-2 fs-5">Get Started</a>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="carousel-item">
+                        <img src="images/cover/cover-3.jpg" class="d-block w-100" alt="...">
+                        <div class="carousel-caption">
+                          <div class="caption-wrapper w-50 mx-auto">
+                              <h2 class="display-3 text-white">Get Started Digital Learning</h2>
+                            <p class="text-white">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout</p>
+                            <a href="#" class="btn bg-primary text-white px-4 py-2 fs-5">Get Started</a>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Next</span>
+                    </button>
+                  </div>
+                </div>
+            </div>
+        </div>
+   </section>
 
 
     <script src="js/bootstrap.bundle.min.js"></script>
