Course Section add

--- a/index.html
+++ b/index.html
@@ -114,6 +114,135 @@
         </div>
    </section>
 
+   <!-- Slider End -->
+
+   <section id="course">
+    <div class="course-wrapper py-5">
+      <div class="container">
+        <div class="section-title w-50 mx-auto text-center mb-5">
+          <h2 class="fs-1" >Discover Our Popular Courses</h2>
+          <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+        </div>
+      </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-xl-6 col-lg-12 col-md-12 col-sm-12 mb-4">
+            <div class="single-course-wrapper">
+              <div class="row g-0 align-items-center border rounded">
+                <div class="col-lg-4 col-md-3">
+                  <div class="course-image">
+                    <img class=" d-block w-100 " src="images/course/course-1.png" alt="">
+                  </div>
+                </div>
+                <div class="col-lg-8 col-md-8">
+                  <div class="course-text ps-4 pe-2">
+                    <h4>Fundamental Of UI/UX Design</h4>
+                    <p>Become a Design Pro with these valuable skills. Find the right instructor for you.</p>
+                    <a href="#" class="course-prise text-decoration-none fs-3">Price : 20$</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-xl-6 col-lg-12 col-md-12 col-sm-12 mb-4">
+            <div class="single-course-wrapper">
+              <div class="row g-0 align-items-center border rounded">
+                <div class="col-lg-4 col-md-3">
+                  <div class="course-image">
+                    <img class=" d-block w-100 " src="images/course/course-1.png" alt="">
+                  </div>
+                </div>
+                <div class="col-lg-8 col-md-9">
+                  <div class="course-text ps-4 pe-2">
+                    <h4>Javascript Basic to advanced</h4>
+                    <p>JavaScript is a text-based programming language used both on the client-side and server-side</p>
+                    <a href="#" class="course-prise text-decoration-none fs-3">Price : 20$</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-xl-6 col-lg-12 col-md-12 col-sm-12 mb-4">
+            <div class="single-course-wrapper">
+              <div class="row g-0 align-items-center border rounded">
+                <div class="col-lg-4 col-md-3">
+                  <div class="course-image">
+                    <img class=" d-block w-100 " src="images/course/course-1.png" alt="">
+                  </div>
+                </div>
+                <div class="col-lg-8 col-md-8">
+                  <div class="course-text ps-4 pe-2">
+                    <h4>Fundamental Of UI/UX Design</h4>
+                    <p>Become a Design Pro with these valuable skills. Find the right instructor for you.</p>
+                    <a href="#" class="course-prise text-decoration-none fs-3">Price : 20$</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-xl-6 col-lg-12 col-md-12 col-sm-12 mb-4">
+            <div class="single-course-wrapper">
+              <div class="row g-0 align-items-center border rounded">
+                <div class="col-lg-4 col-md-3">
+                  <div class="course-image">
+                    <img class=" d-block w-100 " src="images/course/course-1.png" alt="">
+                  </div>
+                </div>
+                <div class="col-lg-8 col-md-9">
+                  <div class="course-text ps-4 pe-2">
+                    <h4>Javascript Basic to advanced</h4>
+                    <p>JavaScript is a text-based programming language used both on the client-side and server-side</p>
+                    <a href="#" class="course-prise text-decoration-none fs-3">Price : 20$</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-xl-6 col-lg-12 col-md-12 col-sm-12 mb-4">
+            <div class="single-course-wrapper">
+              <div class="row g-0 align-items-center border rounded">
+                <div class="col-lg-4 col-md-3">
+                  <div class="course-image">
+                    <img class=" d-block w-100 " src="images/course/course-1.png" alt="">
+                  </div>
+                </div>
+                <div class="col-lg-8 col-md-8">
+                  <div class="course-text ps-4 pe-2">
+                    <h4>Fundamental Of UI/UX Design</h4>
+                    <p>Become a Design Pro with these valuable skills. Find the right instructor for you.</p>
+                    <a href="#" class="course-prise text-decoration-none fs-3">Price : 20$</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-xl-6 col-lg-12 col-md-12 col-sm-12 mb-4">
+            <div class="single-course-wrapper">
+              <div class="row g-0 align-items-center border rounded">
+                <div class="col-lg-4 col-md-3">
+                  <div class="course-image">
+                    <img class=" d-block w-100 " src="images/course/course-1.png" alt="">
+                  </div>
+                </div>
+                <div class="col-lg-8 col-md-9">
+                  <div class="course-text ps-4 pe-2">
+                    <h4>Javascript Basic to advanced</h4>
+                    <p>JavaScript is a text-based programming language used both on the client-side and server-side</p>
+                    <a href="#" class="course-prise text-decoration-none fs-3">Price : 20$</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+   </section>
+
 
     <script src="js/bootstrap.bundle.min.js"></script>
 </body>
