Course image and text update

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
               <div class="row g-0 align-items-center border rounded">
                 <div class="col-lg-4 col-md-3">
                   <div class="course-image">
-                    <img class=" d-block w-100 " src="images/course/course-1.png" alt="">
+                    <img class=" d-block w-100 " src="images/course/course-2.png" alt="">
                   </div>
                 </div>
                 <div class="col-lg-8 col-md-9">
@@ -169,13 +169,13 @@
               <div class="row g-0 align-items-center border rounded">
                 <div class="col-lg-4 col-md-3">
                   <div class="course-image">
-                    <img class=" d-block w-100 " src="images/course/course-1.png" alt="">
+                    <img class=" d-block w-100 " src="images/course/course-3.png" alt="">
                   </div>
                 </div>
                 <div class="col-lg-8 col-md-8">
                   <div class="course-text ps-4 pe-2">
-                    <h4>Fundamental Of UI/UX Design</h4>
-                    <p>Become a Design Pro with these valuable skills. Find the right instructor for you.</p>
+                    <h4>Fullstack Web Development</h4>
+                    <p>A full stack web developer is a person who can develop both client and server software.</p>
                     <a href="#" class="course-prise text-decoration-none fs-3">Price : 20$</a>
                   </div>
                 </div>
@@ -187,13 +187,13 @@
               <div class="row g-0 align-items-center border rounded">
                 <div class="col-lg-4 col-md-3">
                   <div class="course-image">
-                    <img class=" d-block w-100 " src="images/course/course-1.png" alt="">
+                    <img class=" d-block w-100 " src="images/course/course-4.png" alt="">
                   </div>
                 </div>
                 <div class="col-lg-8 col-md-9">
                   <div class="course-text ps-4 pe-2">
-                    <h4>Javascript Basic to advanced</h4>
-                    <p>JavaScript is a text-based programming language used both on the client-side and server-side</p>
+                    <h4>Digital Marketing</h4>
+                    <p>Digital marketing is the promotion of brands to connect with potential customers using the internet </p>
                     <a href="#" class="course-prise text-decoration-none fs-3">Price : 20$</a>
                   </div>
                 </div>
@@ -207,13 +207,13 @@
               <div class="row g-0 align-items-center border rounded">
                 <div class="col-lg-4 col-md-3">
                   <div class="course-image">
-                    <img class=" d-block w-100 " src="images/course/course-1.png" alt="">
+                    <img class=" d-block w-100 " src="images/course/course-5.png" alt="">
                   </div>
                 </div>
                 <div class="col-lg-8 col-md-8">
                   <div class="course-text ps-4 pe-2">
-                    <h4>Fundamental Of UI/UX Design</h4>
-                    <p>Become a Design Pro with these valuable skills. Find the right instructor for you.</p>
+                    <h4>Photography Basic Rules</h4>
+                    <p>Take better photos by following these basic photography rules. Read about them, go out and practise them</p>
                     <a href="#" class="course-prise text-decoration-none fs-3">Price : 20$</a>
                   </div>
                 </div>
@@ -225,13 +225,13 @@
               <div class="row g-0 align-items-center border rounded">
                 <div class="col-lg-4 col-md-3">
                   <div class="course-image">
-                    <img class=" d-block w-100 " src="images/course/course-1.png" alt="">
+                    <img class=" d-block w-100 " src="images/course/course-6.png" alt="">
                   </div>
                 </div>
                 <div class="col-lg-8 col-md-9">
                   <div class="course-text ps-4 pe-2">
-                    <h4>Javascript Basic to advanced</h4>
-                    <p>JavaScript is a text-based programming language used both on the client-side and server-side</p>
+                    <h4>Motion Graphics</h4>
+                    <p>Motion graphics are pieces of animation or digital footage which create the illusion of motion or rotation</p>
                     <a href="#" class="course-prise text-decoration-none fs-3">Price : 20$</a>
                   </div>
                 </div>
