--- a/index.html
+++ b/index.html
@@ -239,6 +239,13 @@
             </div>
           </div>
         </div>
+        <div class="row justify-content-center">
+          <div class="col-12">
+            <div class="course-btn d-flex justify-content-center mt-4">
+              <a href="#" class="btn btn-primary px-4 py-2 fs-4">See More Courses</a>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
    </section>
