Explore Section add

--- a/index.html
+++ b/index.html
@@ -60,7 +60,10 @@
         </div>
     </header>
 
-    <!-- header end  -->
+    <!-- header Area End  -->
+
+
+    <!-- Slider Area Start -->
 
    <section id="sliderArea">
         <div class="slider-wrapper py-2">
@@ -114,14 +117,17 @@
         </div>
    </section>
 
-   <!-- Slider End -->
+   <!-- Slider Area End -->
+
+
+   <!-- course sectio Start  -->
 
    <section id="course">
     <div class="course-wrapper py-5">
       <div class="container">
-        <div class="section-title w-50 mx-auto text-center mb-5">
+        <div class="section-title text-center mb-5">
           <h2 class="fs-1" >Discover Our Popular Courses</h2>
-          <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+          <p class="lead">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
         </div>
       </div>
       <div class="container">
@@ -249,6 +255,53 @@
       </div>
     </div>
    </section>
+
+   <!-- course sectio end  -->
+
+   <!-- Explore Section Start  -->
+
+   <section id="explore">
+    <div class="explore-wrapper">
+      <div class="container  ex-bg">
+        <div class="row justify-content-center align-items-center">
+          <div class="g-0 col-xl-6 col-lg-6 col-md-6 col-sm-12">
+            <div class="explore-image">
+              <img src="images/working.png" class="d-block w-100" alt="">
+            </div>
+          </div>
+          <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
+            <div class="explore-content p-3 p-lg-4">
+              <h2 class="fs-1 mb-lg-4">Explore The elearning Institute</h2>
+              <div class="desktop-para d-none d-xl-block">
+                <p class="para-1 lead fw-normal">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure.</p>
+              <p class="para-2 lead fw-normal">Anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined.</p>
+              </div>
+              <div class="teblet-para d-xl-none">
+                <p class="para-1 ">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which.... <a href="#">See More</a> </p>
+              </div>
+
+              <div class="course-counter mb-2 mb-lg-4 d-flex flex-wrap justify-content-between">
+                <div class="single-counter">
+                  <h4>3.2K+</h4>
+                  <p>Online Course</p>
+                </div>
+                <div class="single-counter">
+                  <h4>600+</h4>
+                  <p>Expert member</p>
+                </div>
+                <div class="single-counter">
+                  <h4>1k+</h4>
+                  <p>Rating & Review</p>
+                </div>
+              </div>
+              <a href="#" class="btn btn-primary">Read More</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+   </section>
+
 
 
     <script src="js/bootstrap.bundle.min.js"></script>
