--- a/index.html
+++ b/index.html
@@ -302,6 +302,56 @@
     </div>
    </section>
 
+   <!-- Explore Section end  -->
+
+
+   <!-- Partner Section Start  -->
+
+   <section class="d-none d-xl-block py-5" id="partner">
+    <div class="partner-wrapper py-5">
+      <div class="container">
+        <div class="row mb-3 justify-content-center">
+          <div class="col-12">
+            <div class="partner-title text-center">
+              <h2 class="fs-1">Trusted by over 800+ companies</h2>
+            </div>
+          </div>
+        </div>
+        <div class="row justify-content-center align-items-center">
+          <div class="col-lg-2">
+            <div class="partner-logo px-3">
+              <img class="d-block w-100" src="images/company/company-1.png" alt="">
+            </div>
+          </div>
+          <div class="col-lg-2">
+            <div class="partner-logo px-3">
+              <img class="d-block w-100" src="images/company/company-2.png" alt="">
+            </div>
+          </div>
+          <div class="col-lg-2">
+            <div class="partner-logo px-3">
+              <img class="d-block w-100" src="images/company/company-3.png" alt="">
+            </div>
+          </div>
+          <div class="col-lg-2">
+            <div class="partner-logo px-3">
+              <img class="d-block w-100" src="images/company/company-4.png" alt="">
+            </div>
+          </div>
+          <div class="col-lg-2">
+            <div class="partner-logo px-3">
+              <img class="d-block w-100" src="images/company/company-5.png" alt="">
+            </div>
+          </div>
+          <div class="col-lg-2">
+            <div class="partner-logo px-3">
+              <img class="d-block w-100" src="images/company/company-6.png" alt="">
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+   </section>
 
 
     <script src="js/bootstrap.bundle.min.js"></script>
