Footer Area Add

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EdTech Education Website</title>
+
+   
+    <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
@@ -352,6 +355,29 @@
       </div>
     </div>
    </section>
+
+   <!-- Partner Section End  -->
+
+   <!-- Footer Area Start  -->
+
+   <footer id="footerArea">
+    <div class="footer-wapper py-5 bg-black">
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <div class="footer-content text-center text-white py-md-5">
+              <h2 class="fs-1">Pro Edu</h2>
+              <p class="lead">Office 41, Zawaya Buildin, Ghala Muscat,<br>Sultanate of Oman</p>
+              <p class="lead">Privacy Ploicy  |   Terms of use</p>
+              <div class="social-icon">
+                <i class="fa-brands fa-facebook-f"></i>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+   </footer>
 
 
     <script src="js/bootstrap.bundle.min.js"></script>
