--- a/index.html
+++ b/index.html
@@ -358,6 +358,29 @@
 
    <!-- Partner Section End  -->
 
+
+   <!-- Register Section Start  -->
+
+   <section class="register my-5" id="register">
+    <div class="register-wrapper">
+      <div class="container bg-primary rounded">
+        <div class="row align-items-center justify-content-between  p-5">
+          <div class="col-md-6 col-lg-6 col-xl-6">
+            <div class="register-content text-center text-md-start mb-5 mb-md-0">
+              <h2 class="fs-1 text-white">Ready to join?</h2>
+              <p class="lead text-white">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-6 col-xl-6 text-center text-md-end">
+            <div class="reg-btn">
+              <a href="#" class="btn bg-white text-primary fs-4 px-3 py-2">Register Now</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+   </section>
+
    <!-- Footer Area Start  -->
 
    <footer id="footerArea">
