Student Section Add

--- a/index.html
+++ b/index.html
@@ -308,9 +308,108 @@
    <!-- Explore Section end  -->
 
 
-   <!-- Partner Section Start  -->
 
-   <section class="d-none d-xl-block py-5" id="partner">
+
+
+   <!-- Register Section Start  -->
+
+   <section class="register my-5" id="register">
+    <div class="register-wrapper">
+      <div class="container bg-primary rounded">
+        <div class="row align-items-center justify-content-between  p-5">
+          <div class="col-md-6 col-lg-6 col-xl-6">
+            <div class="register-content text-center text-md-start mb-5 mb-md-0">
+              <h2 class="fs-1 text-white">Ready to join?</h2>
+              <p class="lead text-white">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-6 col-xl-6 text-center text-md-end">
+            <div class="reg-btn">
+              <a href="#" class="btn bg-white text-primary fs-4 px-3 py-2">Register Now</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+   </section>
+
+
+
+   <!-- Student Section Start -->
+
+   <section class="student my-5" id="student">
+    <div class="sutdent-wrapper py-5">
+      <div class="container">
+        <div class="row mb-3">
+          <div class="col-lg-6">
+            <div class="student-title">
+              <h2 class="fs-1">Meet Our Successfull Students</h2>
+              <p class="lead">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+            </div>
+          </div>
+          <div class="col-lg-6"></div>
+        </div>
+        <div class="row mb-3">
+          <div class="col-lg-3 col-md-6 mb-4 ">
+            <div class="st-content-wrapper border rounded">
+              <div class="st-img">
+                <img class="d-block w-100" src="images/student/student-1.png" alt="">
+              </div>
+              <div class="st-content p-3">
+                <h4>Awlad Hossain</h4>
+                <h6>UIUX Designer</h6>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6 mb-4 ">
+            <div class="st-content-wrapper border rounded">
+              <div class="st-img">
+                <img class="d-block w-100" src="images/student/student-2.png" alt="">
+              </div>
+              <div class="st-content p-3">
+                <h4>Jannatul Islam</h4>
+                <h6>Motion Design</h6>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6 mb-4 ">
+            <div class="st-content-wrapper border rounded">
+              <div class="st-img">
+                <img class="d-block w-100" src="images/student/student-3.png" alt="">
+              </div>
+              <div class="st-content p-3">
+                <h4>Imran Hossain</h4>
+                <h6>Graphic Designer</h6>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6 mb-4 ">
+            <div class="st-content-wrapper border rounded">
+              <div class="st-img">
+                <img class="d-block w-100" src="images/student/student-4.png" alt="">
+              </div>
+              <div class="st-content p-3">
+                <h4>Nishi Akter</h4>
+                <h6>Web Developer</h6>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row justify-content-center">
+          <div class="col-12">
+            <div class="course-btn d-flex justify-content-center mt-4">
+              <a href="#" class="btn btn-primary px-4 py-2 fs-4">View All</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+   </section>
+
+
+  <!-- Partner Section Start  -->
+
+  <section class="d-none d-xl-block py-5" id="partner">
     <div class="partner-wrapper py-5">
       <div class="container">
         <div class="row mb-3 justify-content-center">
@@ -354,32 +453,9 @@
         </div>
       </div>
     </div>
-   </section>
+    </section>
 
-   <!-- Partner Section End  -->
-
-
-   <!-- Register Section Start  -->
-
-   <section class="register my-5" id="register">
-    <div class="register-wrapper">
-      <div class="container bg-primary rounded">
-        <div class="row align-items-center justify-content-between  p-5">
-          <div class="col-md-6 col-lg-6 col-xl-6">
-            <div class="register-content text-center text-md-start mb-5 mb-md-0">
-              <h2 class="fs-1 text-white">Ready to join?</h2>
-              <p class="lead text-white">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-6 col-xl-6 text-center text-md-end">
-            <div class="reg-btn">
-              <a href="#" class="btn bg-white text-primary fs-4 px-3 py-2">Register Now</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-   </section>
+  <!-- Partner Section End  -->
 
    <!-- Footer Area Start  -->
 
@@ -393,7 +469,10 @@
               <p class="lead">Office 41, Zawaya Buildin, Ghala Muscat,<br>Sultanate of Oman</p>
               <p class="lead">Privacy Ploicy  |   Terms of use</p>
               <div class="social-icon">
-                <i class="fa-brands fa-facebook-f"></i>
+                <i class="fab fa-facebook-f mx-3"></i>
+                <i class="fab fa-twitter mx-3"></i>
+                <i class="fab fa-linkedin-in mx-3"></i>
+                <i class="fab fa-tiktok mx-3"></i>
               </div>
             </div>
           </div>
