Testimonial Section Add

--- a/index.html
+++ b/index.html
@@ -406,6 +406,62 @@
     </div>
    </section>
 
+    <!-- Student Section End -->
+
+
+    <!-- Testimonial Section Start  -->
+
+    <section id="testimonial">
+      <div class="test-wrapper py-5">
+        <div class="container">
+          <div class="section-title text-center mb-5">
+            <h2 class="fs-1" >Some Students Feedback</h2>
+            <p class="lead">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+          </div>
+        </div>
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-6 ">
+              <div class="qute-wrapper p-5 border rounded">
+                <div class="qute-icon-star mb-4 d-flex justify-content-between align-items-center">
+                  <div class="qute-icon"><img src="images/comma.png" alt=""></div>
+                  <div class="qure-star"><img src="images/Rating.png" alt=""></div>
+                </div>
+                <div class="quete">
+                  <p class="lead">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem.</p>
+                </div>
+                <div class="avater-title d-flex align-items-center">
+                  <div class="avater me-3"><img src="images/Ellipse 1.png" alt=""></div>
+                  <div class="name-title">
+                    <h4>Pravat Kumar</h4>
+                    <h6>Web Developer</h6>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-6 ">
+              <div class="qute-wrapper p-5 border rounded">
+                <div class="qute-icon-star mb-4 d-flex justify-content-between align-items-center">
+                  <div class="qute-icon"><img src="images/comma.png" alt=""></div>
+                  <div class="qure-star"><img src="images/Rating.png" alt=""></div>
+                </div>
+                <div class="quete">
+                  <p class="lead">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem.</p>
+                </div>
+                <div class="avater-title d-flex align-items-center">
+                  <div class="avater me-3"><img src="images/Ellipse 2.png" alt=""></div>
+                  <div class="name-title">
+                    <h4>Shanta Akter</h4>
+                    <h6>Graphic Designer</h6>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
 
   <!-- Partner Section Start  -->
 
